# Vita

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  flake.nix
assets/shaders/: common.frag.glsl  common.vert.glsl  test.vert.glsl
cmake/: base.cmake  libraries.cmake
cmake/modules/: FindLuaJIT.cmake
ext/glad/: gl.h
ext/glad/include/glad/: gl.h  vulkan.h
ext/glad/src/: gl.c
ext/sokol/: CHANGELOG.md
ext/sol2/: CMakeLists.txt
ext/sol2/include/sol/: config.hpp  forward.hpp  sol.hpp
include/: Engine.hpp  Rect.hpp  Vec2.hpp  Vec2_impl.hpp  common.h  config.h  gpu.h  log.h  log.hpp  pool.h  types.h  types.hpp  utils.h  utils.hpp  window.h
include/core/: Display.hpp  Engine.hpp  Window.hpp
include/engine/: display.h
include/gfx/: Color.hpp  Drawable.hpp  RenderBatcher.hpp  UniformBuffer.hpp  View.hpp  common.h  common.hpp  renderer.h
include/gpu/: color.h  gl.h  renderer.h
include/math/: Mat4.hpp  Matrix.hpp  Rect.hpp  Transform.hpp  Vec2.hpp  Vec2_impl.hpp  Vec2i.hpp  Vec2i_impl.hpp  Vec3.hpp  Vec3_impl.hpp
include/vita/: core.h  gpu.h  window.h
include/vita/gpu/: color.h  renderer.h  shader.h  uniform.h
include/vita/graphics/: common.h  renderer.h
src/: Engine.cpp  Rect.cpp  Vec2.cpp  common.c  gpu.c  log.c  log.cpp  main.c  main.cpp  pool.c  utils.c  window.c
src/core/: Display.cpp  Engine.cpp  Window.cpp
src/engine/: display.c
src/gfx/: Drawable.cpp  RenderBatcher.cpp  View.cpp  common.c  common.cpp  renderer.c
src/gpu/: gl.c  renderer.c
src/math/: Mat4.cpp  Matrix.cpp  Rect.cpp  Transform.cpp  Vec2.cpp  Vec2i.cpp  Vec3.cpp
src/vita/: gpu.c  window.c
src/vita/gpu/: renderer.c  shader.c  uniform.c
src/vita/graphics/: common.c  renderer.c
